# aoc2024

./: README.md  pyproject.toml  setup_day.py  template_for_solution.py  template_for_test.py
2015/day1/: main.py
2015/day2/: main.py
2015/day3/: main.py
2015/day3/tests/: test_day3.py
2024/day10/: main.py
2024/day11/: main.py
2024/day12/: main.py
2024/day13/: main.py
2024/day14/: main.py
2024/day15/: main.py
2024/day16/: main.py  paths.txt
2024/day17/: main.py
2024/day18/: main.py
2024/day19/: main.py
2024/day20/: main.py
2024/day21/: main.py
2024/day22/: main.py
2024/day23/: main.py
2024/day5/: main.py
2024/day5/tests/: example.txt
2024/day6/: main.py
2024/day7/: main.py
2024/day8/: main.py
2024/day8/tests/: test_day8.py
2024/day9/: main.py
day1/: main.py
day1/tests/: test_day1.py
day2/: main.py
day2/tests/: test_day2.py
day3/: main.py
day3/tests/: test_day3.py
day4/: main.py
day4/tests/: test_day4.py
day8/: main.py
utils/: grid.py
