[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "jupyter>=1.1.1",
    "networkx>=3.4.2",
    "numpy>=2.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

